--- a/src/views/layouts/base.pug
+++ b/src/views/layouts/base.pug
@@ -1,4 +1,4 @@
-doctype html
+doctype html (lang=es)
 head
   meta(charset='UTF-8')
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
@@ -14,3 +14,4 @@ body
 
 
 script(src="/static/js/burger.js") 
+script(src="/static/js/cart.js") 
