añadir imagen y factorizar envío de email

--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -18,6 +18,12 @@ block pageContent
                     input.input.is-medium.is-rounded(type='text' placeholder='Tu(s) apellido(s)' autocomplete='lastname' required='' name='lastname')
                 .field
                   .control
+                    input.input.is-medium.is-rounded(type='text' placeholder='Tu dirección' autocomplete='dirección' required='' name='direccion')
+                .field
+                  .control
+                    input.input.is-medium.is-rounded(type='tel' placeholder='Tu número telefónico (con código de área)' autocomplete='phone' required='' name='phone' minlength=8)
+                .field
+                  .control
                     input.input.is-medium.is-rounded(type='email' placeholder='Tu email' autocomplete='username' required='' name='email')
                 .field
                   .control
