--- a/src/views/layouts/base.pug
+++ b/src/views/layouts/base.pug
@@ -9,9 +9,11 @@ head
   link(rel='stylesheet' href='/static/css/bulma-divider.min.css')
   link(rel='stylesheet' href='/static/css/style.css')
   link(rel="shortcut icon", href="/static/img/logo.png", type="image/x-icon")
+  script(src="/socket.io/socket.io.js") 
 body
   block content
 
 
 script(src="/static/js/burger.js") 
 script(src="/static/js/cart.js") 
+script(src="/static/js/chat.js") 
