--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,90 @@ nav.navbar {
 .cart{
   padding: 1rem;
 }
+.chat{
+  position: fixed;
+  top: 90vh;
+  left: 90%;
+  z-index: 999;
+}
+
+.chat .toggle{
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: azure;
+  box-shadow: 0px 0px 5px 5px #ededed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.chat .chat-container{
+  border-radius: 10px;
+  position: relative;
+  width: 200px;
+  top: -340px;
+  padding: 0%;
+  height: auto;
+  left: -100%;
+  background-color: rgba(173, 167, 167, 0.8);
+  font-size: 14px;
+}
+
+.chat .title-container{
+  color: #333;
+  font-weight: 800;
+  text-align: center;
+  font-style: italic;
+  font-size-adjust: initial;
+}
+
+.chat .message-container{
+  height: 240px;
+  overflow-y: auto;
+  background-color: rgb(237, 237, 237, 0.8);
+  padding: 5px;
+}
+
+.chat .message-chat{
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 4px;
+  width: auto;
+  height: auto;
+  max-width: 80%;
+  z-index: 999;
+  margin-bottom: 5px;
+}
+
+.chat .message-chat.received{
+  left: 0;
+}
+
+.chat .message-chat.own{
+  margin-left: 20%;
+}
+
+.chat .message-chat .user, .chat .message-chat .date{
+  font-size: 10px;
+  color: #444;
+  text-align: right;
+}
+
+.chat .message-chat .text{
+  font-size: 12px;
+  color: black;
+}
+
+.chat .input-container{
+  width: 100%;
+}
+
+.chat .input-container input{
+  width: 70%;
+}
+
+.chat .input-container button{
+  width: 30%;
+}
